# dotfiles

./: .bashrc  .gitignore  .stow-local-ignore  .stowrc  .zshrc  README.md  TODO.md  etc  install.sh  mantenimiento.sh
.alias/: alias.zsh  git.zsh  gpt.zsh  update.zsh
.config/: starship.toml
.config/.old/eww/: eww.yuck
.config/ags/: app.ts
.config/ags/styles/: app_launcher.scss  notifications.scss  status_bar.scss  status_bar_old.scss
.config/ags/themes/: gruvbox-dark.scss
.config/ags/widget/: AppLauncher.tsx  NotificationPopups.tsx  StatusBar.tsx
.config/atuin/: config.toml  history.db-shm  history.db-wal  key
.config/bash/alias/: docker.sh
.config/gtk-3.0/: bookmarks
.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/hypr/configs/: binds.conf  input.conf  profiles.conf  ui_ux.conf
.config/hypr/scripts/: datetime.sh  logout.sh  power.sh  restart.sh  status.sh
.config/kitty/: kitty.conf
.config/nushell/: config.nu  env.nu
.config/nushell/alias/: alias.nu  git.nu  pacman.nu  update.nu
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/lua/: vim-options.lua
.config/tmux/: tmux.conf
.config/tmuxinator/: default.yaml  sync_app.yaml  sync_back.yaml
.config/zsh/: .zcompdump  .zshrc
.config/zsh/alias/: alias.sh  copy.zsh  (+2 more)
etc/zsh/: zshenv
neovim/: .stow-local-ignore
scripts/: arch.sh  ubuntu.sh
shell/: .bashrc  .stow-local-ignore
shell/.config/: starship.toml  starship_old.toml
start/: .gitignore  install.nu  main.py  pyproject.toml
start/distros/: __init__.py  arch_installer.py  distro_installer_strategy.py
(+145 files in other folders)
