[project]
name = "gip_linux"
version = "0.0.1"
description = "App for installing my linux system"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyright>=1.1.393",
    "ruff>=0.9.4",
]

[tool.pyright]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = true
reportOptionalSubscript = true
reportGeneralTypeIssues = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportPrivateImportUsage = true

[tool.ruff]
line-length = 80
